add caching to leaderboard